user-api/infrastructure/resources.yml
apiVersion: v1
kind: Service
metadata:
  name: user-api
  labels:
    app: user-api
spec:
  selector:
    app: user-api
  ports:
    - port: 8080
      name: http
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api-v1
  labels:
    app: user-api
spec:
  selector:
    matchLabels:
      app: user-api
  replicas: 1
  template:
    metadata:
      labels:
        app: user-api
        version: v1
    spec:
      containers:
        - name: user-api
          image: docker.io/run3wide/user-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
