user-api/infrastructure/virtual_service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: user-api-vs
spec:
  hosts:
    - "user-api.run3wide.com"
  gateways:
    - k8s-demo-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            port:
              number: 8080
            host: user-api
